# devin-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  create-session-workflow.md  devin-session-guide.md  devin_cli.py  devin_cli_enhanced.py  devin_cli_standalone.py  install.sh  manual_install.sh  pyproject.toml  run_all_tests.py  setup.py  test_cli.py  test_comprehensive.py  test_documentation.md  test_edge_cases.py  test_enhanced.py  test_enhanced_auth.py  test_enhanced_create.py  test_integration.py  test_simple.py  test_unit.py  test_utils.py
.windsurf/workflows/: create-session.md  run-playbook.md
