[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devin-cli"
version = "1.0.0"
description = "A command line tool for creating Devin sessions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Parker Duff"}
]
keywords = ["devin", "cli", "api", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

# Standalone version (no dependencies)
dependencies = []

[project.optional-dependencies]
full = [
    "click>=8.0.0",
    "requests>=2.25.0",
]

[project.scripts]
devin-cli = "devin_cli_standalone:main"

[project.urls]
Homepage = "https://github.com/parkerduff/devin-cli"
Repository = "https://github.com/parkerduff/devin-cli"
Issues = "https://github.com/parkerduff/devin-cli/issues"
